--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
   <body>
     <!-- Cabeçalho com logo -->
     <header>
-      <img src="img/eletrolink_sem_fundo.png" alt="Logo da Empresa" />
-      <nav>
-        <ul>
-          <li>Inicio</li>
-          <li>Sobre</li>
-          <li>Contato</li>
-          <li>Trabalhe Conosco</li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <img
+          src="img/eletrolink_sem_fundo.png"
+          alt="Logo da Empresa"
+          class="logo"
+        />
+        <nav>
+          <ul class="nav-menu">
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="#trabalhe-conosco">Trabalhe Conosco</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- Seção sobre a empresa -->
@@ -27,7 +33,7 @@
         <h3>Sobre Nós</h3>
         <p>
           Fundada em 2019 a Eletro Link Manutenções surgiu com o propósito de
-          atender as necessidades de comercios, indústrias e Rediências,
+          atender as necessidades de comercios, indústrias e Residênciais,
           oferecendo serviços elétricos e Soluções em manutenções.
         </p>
         <p>
@@ -209,7 +215,7 @@
     <footer>
       <p>
         &copy; 2025 Serviços Elétricos Regionais |
-        <a href="mailto:contato@servicoseletricos.com.br">Email de Contato</a>
+        <a href="mailto:eletrolink220@gmail.com">Email de Contato</a>
       </p>
     </footer>
   </body>
