Front-End-Pronto

--- a/index.html
+++ b/index.html
@@ -18,31 +18,14 @@
         />
         <nav>
           <ul class="nav-menu">
-            <li><a href="#inicio">Início</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#contato">Contato</a></li>
-            <li><a href="#trabalhe-conosco">Trabalhe Conosco</a></li>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="#contato">Contatos</a></li>
+            <li><a href="orcamento.html">Solicite um Orçamento</a></li>
+            <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
           </ul>
         </nav>
       </div>
     </header>
-
-    <!-- Seção sobre a empresa -->
-    <section class="section about">
-      <div class="about-item">
-        <h3>Sobre Nós</h3>
-        <p>
-          Fundada em 2019 a Eletro Link Manutenções surgiu com o propósito de
-          atender as necessidades de comercios, indústrias e Residênciais,
-          oferecendo serviços elétricos e Soluções em manutenções.
-        </p>
-        <p>
-          Hoje com uma equipe de profissionais altamente qualificados, estamos
-          prontos para antender com agilidade e profissionalismo às necessidades
-          de nossos clientes.
-        </p>
-      </div>
-    </section>
 
     <div class="container">
       <h2>Alguns de nossos Serviços</h2>
@@ -54,9 +37,18 @@
             alt="Manutenção de cabine elétrica"
             class="img-item"
           />
-          <!-- Adicione sua imagem de serviço -->
+
           <h3>Manutenção de Cabine Primária</h3>
-          <p>Realização de inspeções, reparos e substituição de componentes</p>
+          <p>
+            Nós realizamos manutenção em cabine primária, garantindo o pleno
+            funcionamento e segurança dessas estruturas essenciais.
+          </p>
+          <p>
+            Nossa equipe altamente qualificada está pronta para realizar
+            inspeções, reparos, substituição de componentes e qualquer outro
+            serviço necessário para manter a integridade e eficiência das
+            cabines primárias.
+          </p>
         </div>
         <div class="service-item">
           <img
@@ -64,11 +56,17 @@
             alt="Adequação de Laudo SPDA"
             class="img-item"
           />
-          <!-- Adicione sua imagem de serviço -->
+
           <h3>Adequação e Laudo SPDA</h3>
           <p>
-            Reparos rápidos e manutenção preventiva para evitar problemas
-            futuros.
+            Fazemos Laudo de Sistema de Proteção contra Descargas Atmosféricas
+            (SPDA) e verificamos sua conformidade de acordo com as normas
+            vigentes.
+          </p>
+          <p>
+            Nossa equipe especializada realiza também a adequação das
+            instalações elétricas e sistemas de aterramento, garantindo que o
+            SPDA atenda a todas as exigências técnicas e normativas.
           </p>
         </div>
         <div class="service-item">
@@ -77,11 +75,17 @@
             alt="Montagem de Painel Elétrico"
             class="img-item"
           />
-          <!-- Adicione sua imagem de serviço -->
+
           <h3>Montagem de Painel Elétrico</h3>
           <p>
-            Transforme sua casa com sistemas de automação e iluminação
-            eficiente.
+            Realizamos a montagem e instalação de diversos tipos de painéis
+            elétricos, como o Quadro Geral de Baixa Tensão (QGBT), Centro de
+            Controle de Motores (CCM) e Painel Elétrico de Comando e Controle.
+          </p>
+          <p>
+            Nossa equipe de profissionais altamente qualificados garantirá a
+            instalação correta e segura desses painéis, seguindo todas as normas
+            técnicas e regulamentações vigentes.
           </p>
         </div>
         <div class="service-item">
@@ -90,133 +94,96 @@
             alt="Adequação de Iluminação"
             class="img-item"
           />
-          <!-- Adicione sua imagem de serviço -->
+
           <h3>Adequação de iluminação</h3>
-          <p>Instalações seguras e eficientes para sua casa.</p>
-        </div>
-      </section>
-
-      <!-- Seção de Chamada para Ação (CTA) -->
-      <section class="cta">
-        <div class="cta-item">
-          <h2>Solicite um Orçamento</h2>
           <p>
-            Entre em contato e receba um orçamento personalizado para o seu
-            projeto elétrico.
+            Nós oferecemos serviços de adequação de iluminação para galpões de
+            empresas e condomínios. Temos à disposição um veículo elétricitário
+            para realizar os trabalhos em altura.
           </p>
-          <a href=""
-            ><img
-              src="https://www.svgrepo.com/show/28155/whatsapp.svg"
-              alt="Imagem whatsapp"
-              width="75px"
-          /></a>
-        </div>
-      </section>
-
-      <!-- Seção de Contato -->
-      <section class="section contact">
-        <div class="contact-item">
-          <h3>Telefone</h3>
-          <p>+55 11 99999-9999</p>
-        </div>
-        <div class="contact-item">
-          <h3>Email</h3>
-          <p>eletrolink220@gmail.com</p>
+          <p>
+            Nossa Equipe é especializada e experiente neste tipo de serviço,
+            garantindo um trabalho de qualidade e eficiência. Além disso,
+            utilizamos equipamentos modernos de última geração para garantir uma
+            iluminação adequada e econômina para os ambientes.
+          </p>
         </div>
       </section>
     </div>
 
-    <!-- Seção de Formulário -->
-    <section class="section form-section">
-      <h2>Solicite um Orçamento</h2>
-      <form action="#" method="post" class="form">
-        <label for="name">Nome:</label>
-        <input
-          type="text"
-          id="name"
-          name="name"
-          placeholder="Digite seu nome"
-          required
-        />
+    <!-- Seção sobre a empresa -->
+    <section class="section about">
+      <div class="about-item">
+        <h2>Sobre Nós</h2>
+        <p>
+          Fundada em 2019 a <span>Eletro Link Manutenções</span> surgiu com o
+          propósito de atender as necessidades de empresas comerciais,
+          indústrias, Rediências e condimínios, oferecendo serviços elétricos e
+          Soluções em manutenções.
+          <br />
+          Deste então nossa empresa tem crescido significativamente,
+          acompanhando o desenvolvimento do mercado e as demandas de nossos
+          clientes.
+        </p>
+        <p>
+          Hoje com uma equipe de profissionais altamente qualificados, estamos
+          prontos para antender com agilidade e profissionalismo às necessidades
+          de nossos clientes.
+        </p>
+      </div>
+    </section>
 
-        <label for="email">E-mail:</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Digite seu e-mail"
-          required
-        />
+    <br />
 
-        <label for="service">Qual serviço deseja orçar?</label>
-        <select
-          id="service"
-          name="service"
-          required
-          onchange="toggleOtherServiceInput()"
-        >
-          <option value="" disabled selected>Selecione um serviço</option>
-          <option value="manutencao-cabine">
-            Manutenção de Cabine Primária
-          </option>
-          <option value="laudo-spda">Adequação e Laudo SPDA</option>
-          <option value="montagem-painel">Montagem de Painel Elétrico</option>
-          <option value="iluminacao">Adequação de Iluminação</option>
-          <option value="pequenos-reparos">Pequenos Reparos</option>
-          <option value="others">Outros</option>
-        </select>
-
-        <!-- Campo de texto oculto - "Outros" -->
-        <div
-          id="other-service-container"
-          style="display: none; margin-top: 1rem"
-        >
-          <label for="other-service">Descreva o serviço:</label>
-          <input
-            type="text"
-            id="other-service"
-            name="other-service"
-            placeholder="Descreva o serviço desejado"
-          />
+    <!-- Seção de Contato -->
+    <section id="contato" class="section contact">
+      <h3>Entre em Contato</h3>
+      <p>
+        Estamos prontos para ajudá-lo com suas dúvidas ou solicitações. Entre em
+        contato pelos canais abaixo:
+      </p>
+      <div class="contact-container">
+        <div class="contact-item">
+          <h3>Telefone</h3>
+          <p>
+            <a href="tel:+5511947641802" class="contact-link"
+              >(11) 94764-1802</a
+            >
+          </p>
         </div>
-
-        <label for="phone">Telefone / WhatsApp:</label>
-        <input
-          type="tel"
-          id="phone"
-          name="phone"
-          placeholder="(XX) XXXXX-XXXX"
-          required
-        />
-
-        <label for="cep">CEP:</label>
-        <input
-          type="text"
-          id="cep"
-          name="cep"
-          placeholder="Digite seu CEP"
-          required
-        />
-
-        <label for="description">Descrição:</label>
-        <textarea
-          id="description"
-          name="description"
-          rows="4"
-          placeholder="Descreva o que está acontecendo caso ache necessário"
-        ></textarea>
-
-        <button type="submit">Enviar Solicitação</button>
-        <p>Após o envio do formulário entraremos em contato o quanto antes.</p>
-      </form>
+        <div class="contact-item">
+          <h3>WhatsApp</h3>
+          <p>
+            <a
+              href="https://wa.me/+5511947641802"
+              target="_blank"
+              class="contact-link"
+            >
+              Clique aqui para conversar
+            </a>
+          </p>
+        </div>
+        <div class="contact-item">
+          <h3>E-mail</h3>
+          <p>
+            <a href="mailto:eletrolink220@gmail.com" class="contact-link">
+              eletrolink220@gmail.com
+            </a>
+          </p>
+        </div>
+        <div class="contact-item">
+          <h3>Endereço</h3>
+          <p>
+            Rua Rio Camanducaia, 359 - Jardim Santo Antônio 2<br />Campo Limpo
+            Paulista-SP
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- Rodapé -->
     <footer>
-      <p>
-        &copy; 2025 Serviços Elétricos Regionais |
-        <a href="mailto:eletrolink220@gmail.com">Email de Contato</a>
-      </p>
+      <p>&copy; 2025 Serviços Elétricos Regionais</p>
     </footer>
   </body>
 </html>
