--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="header-container">
         <img
-          src="img/eletrolink_sem_fundo.png"
+          src="../img/eletrolink_sem_fundo.png"
           alt="Logo da Empresa"
           class="logo"
         />
