--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p>
           Fundada em 2019 a <span>Eletro Link Manutenções</span> surgiu com o
           propósito de atender as necessidades de empresas comerciais,
-          indústrias, Residências e condimínios, oferecendo serviços elétricos e
+          indústrias, Residências e condomínios, oferecendo serviços elétricos e
           Soluções em manutenções.
           <br />
           Deste então nossa empresa tem crescido significativamente,
