--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <ul class="nav-menu">
             <li><a href="index.html">Início</a></li>
             <li><a href="#contato">Contatos</a></li>
+            <li><a href="#about">Sobre Nós</a></li>
             <!-- <li><a href="orcamento.html">Solicite um Orçamento</a></li> -->
             <!-- <li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li> -->
           </ul>
