--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <!-- Seção sobre a empresa -->
-    <section class="section about">
+    <section id="about" class="section about">
       <div class="about-item">
         <h2>Sobre Nós</h2>
         <p>
